--- a/iletişim.html
+++ b/iletişim.html
@@ -5,17 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
-        <h2>İletişim Bilgilerim</h2>
-        <h3>Adres</h3>
-        <p>Maltepe/İstanbul</p>
-        <h4>Telefon</h4>
-        <p>05319546247</p>
-        <h4>E-Mail</h4>
-        <a href="mailto:dedeyusufefe@gmail.com">dedeyusufefe@gmail.com</a>
-        <hr>
+    <h2>İletişim Bilgilerim</h2>
+    <h3>Adres</h3>
+    <p>Maltepe/İstanbul</p>
+    <h4>Telefon</h4>
+    <p>05319546247</p>
+    <h4>E-Mail</h4>
+    <a href="mailto:dedeyusufefe@gmail.com">dedeyusufefe@gmail.com</a>
+    <hr>
     <form action="mailto:dedeyusufefe@gmail.com" method="post" enctype="text/plain">
         <div>
             <label for="yourname">Your Name:</label>
