--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Personal Website</title>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
@@ -18,12 +19,14 @@
                 </td>
             </tr>
         </table>
+        <hr>
         <div>
             <nav>
                 <a href="https:ww.google.com"><span>Google'a</span> Bağlantı</a>
                 <a href="index.html">Hakkında</a>
             </nav>
         </div>
+        <hr>
         <p> Ben Yusuf Efe DEDE, Front-End Developer junıor öğrencisiyim. 25 yaşındayım.
         <aside> İstanbul Üniversitesi Su
             Bilimleri Mühendisliği Mezunuyum.</aside>
