--- a/table.html
+++ b/table.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ağır Kuşlar</title>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
